# silicate

./: .gitignore  .gitmodules  .release-please-config.json  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  index.md  installation.md  usage.md
docs/stylesheets/: extra.css
python/silicate/: __init__.py  __init__.pyi
src/: lib.rs
